--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
+
     tools:context=".ui.RecipeFragment">
 
     <LinearLayout
@@ -18,12 +21,6 @@
             android:text="Ingredients"
             android:textColor="@color/cardview_shadow_start_color" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_ingredients"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:listitem="@layout/item_ingredient" />
-
         <TextView
             android:id="@+id/tv_title_steps"
             style="@style/Base.TextAppearance.AppCompat.Title"
@@ -35,7 +32,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_steps"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             tools:listitem="@layout/item_step" />
 
     </LinearLayout>
