--- a/app/src/main/res/layout/item_ingredient.xml
+++ b/app/src/main/res/layout/item_ingredient.xml
@@ -1,19 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
     android:layout_marginEnd="20dp"
     android:layout_marginStart="20dp"
     android:layout_marginTop="10dp"
+    android:orientation="horizontal"
     card_view:contentPadding="20dp">
 
     <TextView
-        android:id="@+id/tv_test"
-        style="@style/Base.TextAppearance.AppCompat.Title"
+        android:id="@+id/tv_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textColor="@color/cardview_shadow_start_color" />
-</android.support.v7.widget.CardView>
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="20sp"
+        tools:text="TextView" />
+
+    <TextView
+        android:id="@+id/tv_measure"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingEnd="6dp"
+        android:paddingStart="0dp"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16sp"
+        tools:text="TextView" />
+
+    <TextView
+        android:id="@+id/tv_ingredient"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="20sp"
+        tools:text="TextView" />
+</LinearLayout>
