--- a/app/src/main/res/layout/item_step.xml
+++ b/app/src/main/res/layout/item_step.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -7,13 +7,15 @@
     android:layout_marginEnd="20dp"
     android:layout_marginStart="20dp"
     android:layout_marginTop="10dp"
+    android:orientation="horizontal"
     card_view:contentPadding="20dp">
 
+
     <TextView
-        android:id="@+id/tv_test"
+        android:id="@+id/tv_title_step"
         style="@style/Base.TextAppearance.AppCompat.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textColor="@color/colorAccent" />
-</android.support.v7.widget.CardView>
+</LinearLayout>
