--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="colorPink1">#E91E63</color>
+    <color name="colorPink2">#AD1457</color>
+    <color name="colorPink3">#FF80AB</color>
+
 </resources>
