--- a/app/src/main/res/layout-sw600dp/activity_recipe.xml
+++ b/app/src/main/res/layout-sw600dp/activity_recipe.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".ui.RecipeActivity">
+    tools:context=".ui.activity.RecipeActivity">
 
     <fragment
         android:id="@+id/fragment_recipe"
-        android:name="com.bakingapp.ui.RecipeFragment"
+        android:name="com.bakingapp.ui.fragment.RecipeFragment"
         android:layout_width="300dp"
         android:layout_height="match_parent" />
 
