--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
 
-    tools:context=".ui.RecipeFragment">
+    tools:context=".ui.fragment.RecipeFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
