--- a/app/src/main/res/layout/fragment_recipe_ingredients.xml
+++ b/app/src/main/res/layout/fragment_recipe_ingredients.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.RecipeIngredientsFragment"
+    tools:context=".ui.fragment.RecipeIngredientsFragment"
     android:orientation="vertical">
 
     <TextView
