--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="colorPink1">#E91E63</color>
     <color name="colorPink2">#AD1457</color>
     <color name="colorPink3">#FF80AB</color>
+    <color name="white">#ffffff</color>
 
 </resources>
